# 112

task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: .main.cpp.swp  CMakeLists.txt  lib.cpp
task2/C/: main.cpp  path.h  path.h.in  tests.cpp
